--- a/ru.html
+++ b/ru.html
@@ -87,15 +87,15 @@
 			<span class="bin-icon-wrap">
 				<img src="items/item2.png" alt="Smiley face" height="120" width="120">
 			</span>		
-		<p class="bin-adv">Proven Products</p>
-The underlying Binance platform has been deployed on 30+ exchanges already. It supports all devices and multiple languages, offering a seamless user experience.
+		<p class="bin-adv">Проверенные продукты</p>
+Базовая платформа Binance уже развернута на 30+ биржах. Она поддерживает все устройства и несколько языков, предлагая удобство работы пользователям.
 		</div>
 		<div class="e-itm bin-item3">
 			<span class="bin-icon-wrap">
 				<img src="items/item3.png" alt="Smiley face" height="120" width="120">
 			</span>		
-		<p class="bin-adv">Superior Technology</p>
-Our certified matching engine is capable of processing 1,400,000 orders per second, making Binance one of the fastest exchange in the market today.
+		<p class="bin-adv">Превосходные технологии</p>
+Наш сертифицированный механизм способен обрабатывать 1 400 000 сделок в секунду, что делает Binance одной из самых быстрых бирж на рынке сегодня.
 		</div>
 	</div>
 </section>
