--- a/ru.html
+++ b/ru.html
@@ -108,10 +108,10 @@
 <section class="bin-start">
 	<div class="bin-vi2">
 		<div class="bin-title"><a id="start">Register</a></div>
-			<p class="bin-st">Step 1: Go to Binance’s registration page</p>
+			<p class="bin-st">Шаг 1: Перейдите на страницу регистрации Binance.</p>
 		<div class="bin-row">
-		Go to <a href="https://www.binance.com/?ref=36742366" target="_blank" rel="nofollow">https://www.binance.com</a> and click on Register found on the top right of the page.Enter the necessary information. It’s good to have a long and arbitrary password to better secure your account. Verify yourself and click on “Register” to proceed and you’ll receive a confirmation email.		<br>
-Attention! Always use an email address which you know is secure and that you check regularly. When creating a password, use a mix of numbers, symbols, upper and lower-case letters.
+		Перейдите на <a href="https://www.binance.com/?ref=36742366" target="_blank" rel="nofollow">https://www.binance.com</a> и нажмите «Регистрация» в правом верхнем углу страницы. Введите необходимую информацию. Хорошо иметь длинный и произвольный пароль, чтобы лучше защитить свой аккаунт. Проверьте себя и нажмите «Зарегистрироваться», чтобы продолжить, и вы получите подтверждение по электронной почте.	<br>
+Внимание! Всегда используйте адрес электронной почты, который, как вы знаете, является безопасным и который вы регулярно проверяете. При создании пароля используйте сочетание цифр, символов, прописных и строчных букв.
 		</div>
 
 			<p class="bin-st">Step 2: Secure your account</p>
