--- a/ru.html
+++ b/ru.html
@@ -110,14 +110,14 @@
 		<div class="bin-title"><a id="start">Register</a></div>
 			<p class="bin-st">Шаг 1: Перейдите на страницу регистрации Binance.</p>
 		<div class="bin-row">
-		Перейдите на <a href="https://www.binance.com/?ref=36742366" target="_blank" rel="nofollow">https://www.binance.com</a> и нажмите «Регистрация» в правом верхнем углу страницы. Введите необходимую информацию. Хорошо иметь длинный и произвольный пароль, чтобы лучше защитить свой аккаунт. Проверьте себя и нажмите «Зарегистрироваться», чтобы продолжить, и вы получите подтверждение по электронной почте.	<br>
+		Перейдите на <a href="https://www.binance.com/?ref=36742366" target="_blank" rel="nofollow">https://www.binance.com</a> и нажмите «Регистрация» в правом верхнем углу страницы. Введите необходимую информацию. Хорошо иметь длинный и произвольный пароль, чтобы лучше защитить свой аккаунт. Запишите данные регистрации и нажмите «Зарегистрироваться», чтобы продолжить, и вы получите подтверждение по электронной почте.	<br>
 Внимание! Всегда используйте адрес электронной почты, который, как вы знаете, является безопасным и который вы регулярно проверяете. При создании пароля используйте сочетание цифр, символов, прописных и строчных букв.
 		</div>
 
-			<p class="bin-st">Step 2: Secure your account</p>
+			<p class="bin-st">Шаг 2. Защитите свой аккаунт</p>
 		<div class="bin-row">
-When your login for the first time, you’ll be asked if you want to set up 2FA. You DO want to set up 2FA, it’s very important! If you choose Skip for now you’ll regret it later!<br>
-2FA is two-factor authentication. It’s a security feature which gives users an extra form of password. When using 2FA, users <span class="bin-grn">enter their normal password and a second code</span> which can be sent to a mobile device by SMS or created by the Google Authenticator app.	
+При первом входе в систему вас спросят, хотите ли вы настроить 2FA. Вы действительно хотите настроить 2FA, это очень важно! Если вы выберете Пропустить сейчас, вы пожалеете об этом позже! <br>
+2FA - это двухфакторная аутентификация. Это функция безопасности, которая дает пользователям дополнительную форму пароля. При использовании 2FA пользователи <span class="bin-grn">enter their normal password and a second code</span> which can be sent to a mobile device by SMS or created by the Google Authenticator app.	
 		
 		</div>
 		<p class="bin-st">Step 3: Deposit funds</p>
