--- a/ru.html
+++ b/ru.html
@@ -117,7 +117,7 @@
 			<p class="bin-st">Шаг 2. Защитите свой аккаунт</p>
 		<div class="bin-row">
 При первом входе в систему вас спросят, хотите ли вы настроить 2FA. Вы действительно хотите настроить 2FA, это очень важно! Если вы выберете Пропустить сейчас, вы пожалеете об этом позже! <br>
-2FA - это двухфакторная аутентификация. Это функция безопасности, которая дает пользователям дополнительную форму пароля. При использовании 2FA пользователи <span class="bin-grn">enter their normal password and a second code</span> which can be sent to a mobile device by SMS or created by the Google Authenticator app.	
+2FA - это двухфакторная аутентификация. Это функция безопасности, которая дает пользователям дополнительную форму пароля. При использовании 2FA пользователи <span class="bin-grn">вводят свой обычный пароль и второй код</span> который можно отправить на мобильное устройство с помощью SMS или создать в приложении Google Authenticator.
 		
 		</div>
 		<p class="bin-st">Step 3: Deposit funds</p>
