--- a/ru.html
+++ b/ru.html
@@ -116,20 +116,19 @@
 
 			<p class="bin-st">Шаг 2. Защитите свой аккаунт</p>
 		<div class="bin-row">
-При первом входе в систему вас спросят, хотите ли вы настроить 2FA. Вы действительно хотите настроить 2FA, это очень важно! Если вы выберете Пропустить сейчас, вы пожалеете об этом позже! <br>
-2FA - это двухфакторная аутентификация. Это функция безопасности, которая дает пользователям дополнительную форму пароля. При использовании 2FA пользователи <span class="bin-grn">вводят свой обычный пароль и второй код</span> который можно отправить на мобильное устройство с помощью SMS или создать в приложении Google Authenticator.
+При первом входе в систему вас спросят, хотите ли вы настроить 2FA. Это очень важно! Если вы выберете Пропустить сейчас, вы пожалеете об этом позже! <br>
+2FA - это двухфакторная аутентификация о Google. Это функция безопасности, которая дает пользователям дополнительную форму пароля. При использовании 2FA пользователи <span class="bin-grn">вводят свой обычный пароль и второй код от Google</span> который можно отправить на мобильное устройство с помощью SMS или создать в приложении Google Authenticator.
 		
 		</div>
-		<p class="bin-st">Step 3: Deposit funds</p>
-		<div class="bin-row">In the top-right-hand corner of the Binance homepage, find a tab labeled "Funds." Hover over that and click on "Deposit/Withdrawals."<br>
-Search for Crypto or USDT, and then press the "Deposit" tab.
+		<p class="bin-st">Шаг 3: Внесите средства</p>
+		<div class="bin-row">В верхнем правом углу домашней страницы Binance найдите вкладку «Фонды». Наведите курсор на нее и нажмите «Пополнение / Снятие». <br>
+Выбирите Криптовалюту или USDT, а затем нажмите вкладку «Депозит».
 
 		</div>
-		<p class="bin-st">Step 4: Start trading</p>
-		<div class="bin-row">Enjoy trading on Binance and good luck!<br>
-		It’s very very easy to make mad money when the market is on an upswing, less so when cryptocurrency enters a bear market. Talented traders, and those with information, can make money on the way up and on the way down.<br>
-
-		If you’ve followed the steps above you should see this screen.
+		<p class="bin-st">Шаг 4: Начните торговать</p>
+		<div class="bin-row">Наслаждайтесь торговлей на Binance и удачи! <br>
+Очень легко заработать безумные деньги, когда рынок находится на подъеме, тем более, когда криптовалюта выходит на медвежий рынок. Талантливые трейдеры и те, у кого есть информация, могут зарабатывать деньги на пути вверх и вниз. 
+Если вы выполнили шаги, описанные выше, вы должны увидеть этот экран.
 		</div>
 	<div class="bin-arr">
 	</div>
