--- a/ru.html
+++ b/ru.html
@@ -127,7 +127,7 @@
 		</div>
 		<p class="bin-st">Шаг 4: Начните торговать</p>
 		<div class="bin-row">Наслаждайтесь торговлей на Binance и удачи! <br>
-Очень легко заработать безумные деньги, когда рынок находится на подъеме, тем более, когда криптовалюта выходит на медвежий рынок. Талантливые трейдеры и те, у кого есть информация, могут зарабатывать деньги на пути вверх и вниз. 
+Очень легко заработать безумные деньги, когда рынок находится на подъеме, тем более, когда криптовалюта выходит на медвежий рынок. Талантливые трейдеры и те, у кого есть информация, могут зарабатывать деньги как на пути вверх, так и вниз. 
 Если вы выполнили шаги, описанные выше, вы должны увидеть этот экран.
 		</div>
 	<div class="bin-arr">
