--- a/ru.html
+++ b/ru.html
@@ -80,7 +80,7 @@
 			<span class="bin-icon-wrap">
 				<img src="items/item1.png" alt="Smiley face" height="120" width="120">
 			</span>
-		<p class="bin-adv">Сильнейшая команда</p>
+		<p class="bin-adv">Сильнейшая  <br>команда</p>
 		Наша команда во главе с Чангпенгом Чжао имеет опыт работы в сфере Уолл-стрит и криптофинансирования. Наша команда также имеет опыт успешных стартапов под нашим брендом.
 		</div>
 		<div class="e-itm bin-item2">
