--- a/ru.html
+++ b/ru.html
@@ -144,8 +144,8 @@
 <section class="bin-advantage">
 <div class="bin-title"><a id="fees">Fees</a></div>
 <div class="bin-vi3">
-<h2>Deposit fees – zero</h2>
-<p>Binance charges no fee to deposit any cryptoasset. Binance offers trading pairs with BTC, ETH, and USDT, but not fiat. So you’ll first need to use an exchange like Coinbase to swap your fiat for crypto. Then you can deposit your crypto on Binance for free.</p>
+<h2>Комиссия за депозит - 0</h2>
+<p>Binance не взимает комиссию за внесение депозита. Binance предлагает торговые пары с BTC, ETH и USDT, но не с фиатом. Поэтому сначала вам нужно использовать биржу, такую как Coinbase, чтобы обменять фиат на криптовалюту. После этого вы можете бесплатно внести свою криптовалюту в Binance.</p>
 <h2>Trading fees</h2>
 Fees -  0.1%<br>
 <p>Trading fees – percentage of trade amount that you can reduce in two ways
