--- a/ru.html
+++ b/ru.html
@@ -146,22 +146,21 @@
 <div class="bin-vi3">
 <h2>Комиссия за депозит - 0</h2>
 <p>Binance не взимает комиссию за внесение депозита. Binance предлагает торговые пары с BTC, ETH и USDT, но не с фиатом. Поэтому сначала вам нужно использовать биржу, такую как Coinbase, чтобы обменять фиат на криптовалюту. После этого вы можете бесплатно внести свою криптовалюту в Binance.</p>
-<h2>Trading fees</h2>
-Fees -  0.1%<br>
-<p>Trading fees – percentage of trade amount that you can reduce in two ways
-Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.</p>
-<p>If you are not using BNB (Binance Coin) to pay your trading fees, each trade will carry a standard fee of 0.1%.
-Using BNB for transaction fees applies a discount to your trading fee. By default, if you hold BNB in your account, your trading fees will be automatically subtracted from your BNB balance. </p>
+<h2>Комиссия за торговлю</h2>
+Комиссия -  0.1%<br>
+<p>Торговая комиссия - это процент от суммы сделки, который вы можете уменьшить двумя способами. После того, как вы внесли часть криптовалюты в Binance, то теперь вы готовы торговать. Но обязательно обратите внимание на торговую комиссию. Как и в случае с большинством централизованных бирж, Binance берет процент с каждой сделки, которую вы совершаете. Сумма этого процента зависит от двух вещей: (1) держите ли вы токен BNB и сколько вы его держите, и (2) сумму вашего 30-дневного торгового объема.
+</p>
+<p>Если вы не используете BNB (Binance Coin) для оплаты комиссии, каждая сделка будет содержать стандартную комиссию в размере 0,1%. При использовании BNB для комиссий за транзакцию применяется скидка на комиссию за торговлю. По умолчанию, если вы держите BNB на своем счете, ваша торговая комиссия будет автоматически вычитаться из баланса BNB. </p>
 	</div>
 <div class="bin-vi2">
 <table class="responsive-table mar">
     <caption>Fee Structure</caption>
     <thead>
       <tr>
-			<th scope="col">Level</th>
-			<th scope="col">30d Trade Volume(BTC)</th>
+			<th scope="col">Уровень</th>
+			<th scope="col">30-й объем торгов (BTC)</th>
 			<th scope="col">&amp;</th>
-			<th scope="col">BNB holdings</th>
+			<th scope="col">BNB холдинг</th>
 			<th scope="col">Maker</th>
 			<th scope="col">Taker</th>
 			<th scope="col">Maker</th>
