--- a/ru.html
+++ b/ru.html
@@ -296,9 +296,9 @@
 
 <section class="bin-faq">
 	<div class="bin-vi2">
-<div class="bin-title"><a id="about">About Binance</a></div>	
+<div class="bin-title"><a id="about">О Бинанс</a></div>	
 	<div class="bin-vi3">
-	Binance  aims to build a secure, transparent and open blockchain community for users around the world. The Company put our community interests first, sustain a 1,400,000 orders-per-second matching engine, provide 24/7 customer service, and count on strong technical support from our global team. Binance  is building together, with our users, a world-class blockchain community.
+Binance стремится создать безопасное, прозрачное и открытое  сообщество для пользователей по всему миру. Компания ставит на первое место интересы сообщества, поддерживает механизм согласования 1400000 заказов в секунду, обеспечивает круглосуточное обслуживание клиентов и рассчитывает на сильную техническую поддержку со стороны нашей глобальной команды. Binance вместе с нашими пользователями создает блокчейн сообщество мирового класса.
 
 	
 	</div>
@@ -309,14 +309,14 @@
 <section class="bin-faq">
 	<div class="bin-vi2">	
 	<div class="bin-vi3">
-Binance is a popular cryptocurrency exchange which was started in China but recently moved their headquarters to the crypto-friendly Island of Malta in the EU. 	
+Binance - это популярная биржа криптовалют, которая была запущена в Китае, но недавно перенесла свою штаб-квартиру на криптовалютный остров Мальта в ЕС. 	
 	
 	</div>
 	</div>
 </section>	
 
 <section class="bin-advantage">
-<div class="bin-title"><a id="reviews">Reviews</a></div>
+<div class="bin-title"><a id="reviews">Отзывы</a></div>
 <div class="bin-vi3">	
 
 <div class="review-card">
@@ -336,12 +336,12 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 	<div class="review-content">
 		<div class="review-content-header">
 			<div class="review-content-header__dates">
-			<div class="v-popover nev2">An hour ago  </div>
+			<div class="v-popover nev2">Час назад  </div>
 			</div>
 		</div>
 		<div class="review-content__body" v-pre="">
 			<p class="review-content__text">
-				fast growing exchange with wide range of services
+				быстро растущая биржа с широким спектром услуг
 			</p>
 		</div>
 	</div>
@@ -367,12 +367,12 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 	<div class="review-content">
 		<div class="review-content-header">
 			<div class="review-content-header__dates">
-			<div class="v-popover nev2">1 day ago</div>
+			<div class="v-popover nev2">1 день назад</div>
 			</div>
 		</div>
 		<div class="review-content__body" v-pre="">
 			<p class="review-content__text">
-Good exchange if you don't need the customer service. This is the best exchange to trade ALTS. Have been using Binance for 2 years and never had any issues except when I had to contact the customer service.
+Хорошая биржа, если вам не нужно обслуживание клиентов. Это лучшая биржа для торговли альткоинами. Использую Binance в течение 2 лет и никогда не возникало никаких проблем, кроме случаев, когда мне приходилось обращаться в службу поддержки.
 			</p>
 		</div>
 	</div>
@@ -399,12 +399,12 @@ Jordan Ross
 	<div class="review-content">
 		<div class="review-content-header">
 			<div class="review-content-header__dates">
-			<div class="v-popover nev2">3 day ago</div>
+			<div class="v-popover nev2">3 дня назад</div>
 			</div>
 		</div>
 		<div class="review-content__body" v-pre="">
 			<p class="review-content__text">
-Binance customer support is the greatest lack when it has been compared to other exchanges.
+Поддержка клиентов Binance является наибольшим недостатком по сравнению с другими биржами.
 			</p>
 		</div>
 	</div>
