--- a/ru.html
+++ b/ru.html
@@ -421,7 +421,7 @@ Jordan Ross
 	<div class="bin-vi2">	
 	<div class="bin-vi3">
 <div class="comment-section">
-	<h1 class="comment-reply-title">Write your comment!</h1>
+	<h1 class="comment-reply-title">Напишите свой отзыв!</h1>
 	<form id="commentform" class="comment-form">
 		<div class="comment-form-name">
 			<input id="name" placeholder="Name *" name="name" type="text" value="" pattern="^[^0-9]+$" size="30" maxlength="245" required>
@@ -444,7 +444,7 @@ Jordan Ross
 			<label for="comment" data-help="Escribe algo! Lo primero que se te ocurra">Comment</label>
 		</div>
 		<div class="form-submit">
-			<input name="submit" type="submit" id="submit" class="submit" value="Post Comment">
+			<input name="submit" type="submit" id="submit" class="submit" value="Оставить отзыв">
 		</div>
 	</form>
 </div>
@@ -482,7 +482,7 @@ Jordan Ross
 	<div class="">
 		<div class="bin-flex">
 			<div class="foot-itm community">
-				<p>Community</p>
+				<p>Сообщество</p>
 				<ul>
 					<li><a href="https://www.binance.com/en/blog" target="_blank" rel="nofollow"><i class="fas fa-rss"></i> Blog</a>
 					</li>
@@ -511,7 +511,7 @@ Jordan Ross
 		</div>
 		
 			<div class="foot-itm developer-resources">
-			<p>Developer Resources</p>
+			<p>Ресурсы для разработчиков</p>
 			<ul>
 				<li>What is biner? <a href="#FAQ">Read our FAQ</a></li>
 				<li>Browse our source code on <a href="https://github.com/binance-exchange" target="_blank" rel="nofollow">GitHub</a></li>
