--- a/ru.html
+++ b/ru.html
@@ -484,7 +484,7 @@ Jordan Ross
 			<div class="foot-itm community">
 				<p>Сообщество</p>
 				<ul>
-					<li><a href="https://www.binance.com/en/blog" target="_blank" rel="nofollow"><i class="fas fa-rss"></i> Blog</a>
+					<li><a href="https://www.binance.com/en/blog" target="_blank" rel="nofollow"><i class="fas fa-rss"></i> Блог</a>
 					</li>
 					<li><a href="https://github.com/binance-exchange" target="_blank" rel="nofollow"><i class="fab fa-github"></i> GitHub</a>
 					</li>
@@ -513,17 +513,18 @@ Jordan Ross
 			<div class="foot-itm developer-resources">
 			<p>Ресурсы для разработчиков</p>
 			<ul>
-				<li>What is biner? <a href="#FAQ">Read our FAQ</a></li>
-				<li>Browse our source code on <a href="https://github.com/binance-exchange" target="_blank" rel="nofollow">GitHub</a></li>
-				<li>Read the <a href="https://github.com/binance-exchange/binance-official-api-docs" target="_blank" rel="nofollow">documentation</a>
+				<li>Что такое Бинанс <a href="#about">Прочитайте раздел О Бинанс</a></li>
+				<li>Просмотрите наш исходный код  <a href="https://github.com/binance-exchange" target="_blank" rel="nofollow">GitHub</a></li>
+				<li>Прочитайте <a href="https://github.com/binance-exchange/binance-official-api-docs" target="_blank" rel="nofollow">документацию</a>
 		or <a href="https://github.com/binereum/wiki/wiki" target="_blank" rel="nofollow">wiki</a></li>
-		<li>Learn <a href="https://solidity.readthedocs.org/" target="_blank" rel="nofollow">Solidity</a></li>
-		<li>See the latest <a href="https://etherscan.io/token/0xB8c77482e45F1F44dE1745F52C74426C631bDD52" target="_blank" rel="nofollow">data and network stats</a>
+		<li>Изучите <a href="https://solidity.readthedocs.org/" target="_blank" rel="nofollow">Solidity</a></li>
+		<li>Смотрите последние данные и 
+ <a href="https://etherscan.io/token/0xB8c77482e45F1F44dE1745F52C74426C631bDD52" target="_blank" rel="nofollow">статистику сети</a>
 		</li>
-		<li>Download our <a href="https://www.binance.com/assetsForDownload.html" rel="nofollow">logo assets </a></li>
-		<li>Want to write about binereum? <a href="mailto:press@binereum.org">Press inquiries</a>
+		<li>Загрузите наши <a href="https://www.binance.com/assetsForDownload.html" rel="nofollow">логотипы </a></li>
+		<li>Хочешь написать про Бинанс?  <a href="mailto:press@binereum.org">Press inquiries</a>
 		</li>
-		<li>Russian version <a href="/ru">Switch Language </a>
+		<li>English version <a href="https://binance-register.github.io">Switch Language </a>
 		</li>
 			</ul>
 			</div>
@@ -540,7 +541,7 @@ Jordan Ross
 		All rights belong to their respective owners. © 2018-2019
 		</div>
 	</div>
-	<a href="https://binance-register.github.io/cookie" class="bin-policy" target="_blank" rel="nofollow">Cookie Policy</a>
+	<a href="https://binance-register.github.io/cookie" class="bin-policy" target="_blank" rel="nofollow">Cookie политика</a>
 </section>
   </div>
 </div>  </body>
