--- a/ru.html
+++ b/ru.html
@@ -280,12 +280,12 @@
 -->
 
 <section class="bin-down">
-<div class="bin-title whitez1"><a id="download">Open a Binance Account</a></div>
+<div class="bin-title whitez1"><a id="download">Зарегистрироваться на бинансе</a></div>
 <div class="bin-download">
 	<div class="bin-flex">	
 		<div class="bin-get">
 		<div class="bin-button down">
-		<a href="https://www.binance.com/?ref=36742366">Register Now</a>
+		<a href="https://www.binance.com/?ref=36742366">Зарегистрируйтесь сейчас!</a>
 		</div>
 		</div>	
 	</div>
