--- a/ru.html
+++ b/ru.html
@@ -48,7 +48,7 @@
 
 		<div class="menu-toggle">
 			<ul class="menu clearfix">
-				<li class="first leaf"><a href="#start" title="">Register</a></li>
+				<li class="first leaf"><a href="#start" title="">Регистрация</a></li>
 				<li class="leaf"><a href="#fees" title="">Fees</a></li>
 				<li class="leaf"><a href="#about" title="">About</a></li>
 				<li class="last leaf"><a href="#reviews" title="">Reviews</a></li>
@@ -107,7 +107,7 @@
 </section>
 <section class="bin-start">
 	<div class="bin-vi2">
-		<div class="bin-title"><a id="start">Register</a></div>
+		<div class="bin-title"><a id="start">Регистрация</a></div>
 			<p class="bin-st">Шаг 1: Перейдите на страницу регистрации Binance.</p>
 		<div class="bin-row">
 		Перейдите на <a href="https://www.binance.com/?ref=36742366" target="_blank" rel="nofollow">https://www.binance.com</a> и нажмите «Регистрация» в правом верхнем углу страницы. Введите необходимую информацию. Хорошо иметь длинный и произвольный пароль, чтобы лучше защитить свой аккаунт. Запишите данные регистрации и нажмите «Зарегистрироваться», чтобы продолжить, и вы получите подтверждение по электронной почте.	<br>
