--- a/ru.html
+++ b/ru.html
@@ -49,7 +49,7 @@
 		<div class="menu-toggle">
 			<ul class="menu clearfix">
 				<li class="first leaf"><a href="#start" title="">Регистрация</a></li>
-				<li class="leaf"><a href="#fees" title="">Fees</a></li>
+				<li class="leaf"><a href="#fees" title="">Комиссия</a></li>
 				<li class="leaf"><a href="#about" title="">About</a></li>
 				<li class="last leaf"><a href="#reviews" title="">Reviews</a></li>
 			</ul>
@@ -142,13 +142,13 @@
 
 
 <section class="bin-advantage">
-<div class="bin-title"><a id="fees">Fees</a></div>
+<div class="bin-title"><a id="fees">Комиссия</a></div>
 <div class="bin-vi3">
 <h2>Комиссия за депозит - 0</h2>
 <p>Binance не взимает комиссию за внесение депозита. Binance предлагает торговые пары с BTC, ETH и USDT, но не с фиатом. Поэтому сначала вам нужно использовать биржу, такую как Coinbase, чтобы обменять фиат на криптовалюту. После этого вы можете бесплатно внести свою криптовалюту в Binance.</p>
-<h2>Комиссия за торговлю</h2>
+<h2>Комиссия за сделку</h2>
 Комиссия -  0.1%<br>
-<p>Торговая комиссия - это процент от суммы сделки, который вы можете уменьшить двумя способами. После того, как вы внесли часть криптовалюты в Binance, то теперь вы готовы торговать. Но обязательно обратите внимание на торговую комиссию. Как и в случае с большинством централизованных бирж, Binance берет процент с каждой сделки, которую вы совершаете. Сумма этого процента зависит от двух вещей: (1) держите ли вы токен BNB и сколько вы его держите, и (2) сумму вашего 30-дневного торгового объема.
+<p>Торговая комиссия - это процент от суммы сделки, который вы можете уменьшить двумя способами. После того, как вы внесли часть криптовалюты в Binance, то теперь вы готовы торговать. Но обязательно обратите внимание на комиссию за ордер. Как и в случае с большинством централизованных бирж, Binance берет процент с каждой сделки, которую вы совершаете. Сумма этого процента зависит от двух вещей: (1) держите ли вы токен BNB и сколько вы его держите, и (2) сумму вашего 30-дневного торгового объема.
 </p>
 <p>Если вы не используете BNB (Binance Coin) для оплаты комиссии, каждая сделка будет содержать стандартную комиссию в размере 0,1%. При использовании BNB для комиссий за транзакцию применяется скидка на комиссию за торговлю. По умолчанию, если вы держите BNB на своем счете, ваша торговая комиссия будет автоматически вычитаться из баланса BNB. </p>
 	</div>
