--- a/ru.html
+++ b/ru.html
@@ -50,8 +50,8 @@
 			<ul class="menu clearfix">
 				<li class="first leaf"><a href="#start" title="">Регистрация</a></li>
 				<li class="leaf"><a href="#fees" title="">Комиссия</a></li>
-				<li class="leaf"><a href="#about" title="">About</a></li>
-				<li class="last leaf"><a href="#reviews" title="">Reviews</a></li>
+				<li class="leaf"><a href="#about" title="">Основатель</a></li>
+				<li class="last leaf"><a href="#reviews" title="">Отзывы</a></li>
 			</ul>
 		</div>  
 	</nav>
@@ -310,7 +310,8 @@ Binance стремится создать безопасное, прозрачн
 	<div class="bin-vi2">	
 	<div class="bin-vi3">
 Binance - это популярная биржа криптовалют, которая была запущена в Китае, но недавно перенесла свою штаб-квартиру на криптовалютный остров Мальта в ЕС. 	
-	
+<h2>Основал биржу binance Чанпен Чжао</h2>
+
 	</div>
 	</div>
 </section>	
