--- a/ru.html
+++ b/ru.html
@@ -311,7 +311,14 @@ Binance стремится создать безопасное, прозрачн
 	<div class="bin-vi3">
 Binance - это популярная биржа криптовалют, которая была запущена в Китае, но недавно перенесла свою штаб-квартиру на криптовалютный остров Мальта в ЕС. 	
 <h2>Основал биржу binance Чанпен Чжао</h2>
-
+<p>
+<a href="items/examples/how/Changpeng.jpg" target="_blank">
+<img src="items/examples/how/Changpeng.jpg" alt="Changpeng"></a>
+</p>
+<p>
+<a href="items/examples/how/Changpeng2.jpg" target="_blank">
+<img src="items/examples/how/Changpeng2.jpg" alt="Changpeng"></a>
+</p>
 	</div>
 	</div>
 </section>	
