--- a/ru.html
+++ b/ru.html
@@ -542,12 +542,12 @@ Jordan Ross
 </section>
 <section class="bin-post-foot clearfix">
 	<div class="bin-vi2">
-		<div class="nev3 bin-left">Note, when downloading the Claymore Miner, Windows may issue a warning, but if you used Claymore Dual Miner download link you can ignore this.
+		<div class="nev3 bin-left">Официальная документация для API и потоков Binance представлена в github репозитории.
 		</div>
 
 		<div class="nev3 bin-right">Disclaimer: This isn't an official binances site.  No binary files were affected.
 
-		All rights belong to their respective owners. © 2018-2019
+		Все права принадлежат их владельцам. © 2018-2019
 		</div>
 	</div>
 	<a href="https://binance-register.github.io/cookie" class="bin-policy" target="_blank" rel="nofollow">Cookie политика</a>
