--- a/index.html
+++ b/index.html
@@ -295,7 +295,6 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 </section>
 
 
-
 <section class="bin-faq">
 	<div class="bin-vi2">
 <div class="bin-title"><a id="about">About Binance</a></div>	
@@ -318,6 +317,44 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 </section>	
 
 <section class="bin-advantage">
+	<div class="bin-vi2">	
+	<div class="bin-vi3">
+<div class="comment-section">
+	<h1 class="comment-reply-title">Write your comment!</h1>
+	<form id="commentform" class="comment-form">
+		<div class="comment-form-name">
+			<input id="name" placeholder="Name *" name="name" type="text" value="" pattern="^[^0-9]+$" size="30" maxlength="245" required>
+			<label for="name" data-help="¿Are you 11 from Stranger Things?">Name</label>
+		</div>
+		<div class="comment-form-surname">
+			<input id="surname" placeholder="Surname *" name="surname" type="text" value="" size="30" maxlength="245" required>
+			<label for="surname" data-help="A girl has no name- Arya Stark">Surname</label>
+		</div>
+		<div class="comment-form-email">
+			<input id="email" placeholder="Email *" name="email" type="email" value="" size="30" maxlength="100" aria-describedby="email-notes" required>
+			<label for="email" data-help="Format email@email.com">Email</label>
+		</div>
+		<div class="comment-form-url">
+			<input id="url" placeholder="Website" name="url" type="url" value="" size="30" maxlength="200">
+			<label for="url" data-help="Should start with http:// o https://">Website</label>
+		</div>
+		<div class="comment-form-comment">
+			<textarea textarea="" placeholder="Comment *" id="comment" name="comment" cols="45" rows="8" maxlength="65525" required></textarea>
+			<label for="comment" data-help="Escribe algo! Lo primero que se te ocurra">Comment</label>
+		</div>
+		<div class="form-submit">
+			<input name="submit" type="submit" id="submit" class="submit" value="Post Comment">
+		</div>
+	</form>
+</div>
+
+
+	</div>
+	</div>
+</section>
+
+
+<section class="bin-faq">
 <div class="bin-title"><a id="reviews">Reviews</a></div>
 <div class="bin-vi3">	
 
@@ -418,43 +455,7 @@ Binance customer support is the greatest lack when it has been compared to other
 	</div>
 	</div>
 </section>	
-
-<section class="bin-faq">
-	<div class="bin-vi2">	
-	<div class="bin-vi3">
-<div class="comment-section">
-	<h1 class="comment-reply-title">Write your comment!</h1>
-	<form id="commentform" class="comment-form">
-		<div class="comment-form-name">
-			<input id="name" placeholder="Name *" name="name" type="text" value="" pattern="^[^0-9]+$" size="30" maxlength="245" required>
-			<label for="name" data-help="¿Are you 11 from Stranger Things?">Name</label>
-		</div>
-		<div class="comment-form-surname">
-			<input id="surname" placeholder="Surname *" name="surname" type="text" value="" size="30" maxlength="245" required>
-			<label for="surname" data-help="A girl has no name- Arya Stark">Surname</label>
-		</div>
-		<div class="comment-form-email">
-			<input id="email" placeholder="Email *" name="email" type="email" value="" size="30" maxlength="100" aria-describedby="email-notes" required>
-			<label for="email" data-help="Format email@email.com">Email</label>
-		</div>
-		<div class="comment-form-url">
-			<input id="url" placeholder="Website" name="url" type="url" value="" size="30" maxlength="200">
-			<label for="url" data-help="Should start with http:// o https://">Website</label>
-		</div>
-		<div class="comment-form-comment">
-			<textarea textarea="" placeholder="Comment *" id="comment" name="comment" cols="45" rows="8" maxlength="65525" required></textarea>
-			<label for="comment" data-help="Escribe algo! Lo primero que se te ocurra">Comment</label>
-		</div>
-		<div class="form-submit">
-			<input name="submit" type="submit" id="submit" class="submit" value="Post Comment">
-		</div>
-	</form>
-</div>
-
-
-	</div>
-	</div>
-</section>	
+	
 
 <!--
 <section class="bin-faq">
@@ -515,7 +516,7 @@ Binance customer support is the greatest lack when it has been compared to other
 			<div class="foot-itm developer-resources">
 			<p>Developer Resources</p>
 			<ul>
-				<li>What is biner? <a href="#FAQ">Read our FAQ</a></li>
+				<li>What is Binance? <a href="#about">Read our ABOUT</a></li>
 				<li>Browse our source code on <a href="https://github.com/binance-exchange" target="_blank" rel="nofollow">GitHub</a></li>
 				<li>Read the <a href="https://github.com/binance-exchange/binance-official-api-docs" target="_blank" rel="nofollow">documentation</a>
 		or <a href="https://github.com/binereum/wiki/wiki" target="_blank" rel="nofollow">wiki</a></li>
@@ -523,7 +524,7 @@ Binance customer support is the greatest lack when it has been compared to other
 		<li>See the latest <a href="https://etherscan.io/token/0xB8c77482e45F1F44dE1745F52C74426C631bDD52" target="_blank" rel="nofollow">data and network stats</a>
 		</li>
 		<li>Download our <a href="https://www.binance.com/assetsForDownload.html" rel="nofollow">logo assets </a></li>
-		<li>Want to write about binereum? <a href="mailto:press@binereum.org">Press inquiries</a>
+		<li>Want to write about Binance? <a href="mailto:press@binereum.org">Press inquiries</a>
 		</li>
 		<li>Russian version <a href="/ru">Switch Language </a>
 		</li>
