--- a/ru.html
+++ b/ru.html
@@ -12,7 +12,7 @@
 <meta name="MobileOptimized" content="width" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="description" content="Open a binance account in easy simple steps. Published : 03 May 2019. To set up and register a Binance account, you need to open the Binance website." />
+<meta name="description" content="Зарегистрируйтесь на binance быстро и просто. Опубликовано: 03 Мая 2019. Чтобы защитить и зарегистрировать учетную запись Binance, необходимо открыть веб-сайт Binance..." />
 
 <link rel="stylesheet" href="/css/bin.css">
 <link rel="stylesheet" href="/css/global.base.css">
