--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -5,14 +5,14 @@
 <!--[if IE 8]><html class="lt-ie9" lang="ru" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!--><html lang="ru" dir="ltr" prefix="content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"><!--<![endif]-->
 <head>
-<title>Binance Регистрация и Защита Аккаунта. Пошагово  [RUS, 2019]</title>
+<title>Взлом Бинанса. Когда откроют торги. Итоги [обновлено]]</title>
 <meta charset="utf-8" />
 <link rel="shortcut icon" href="items/favicon.ico" type="image/x-icon" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <meta name="MobileOptimized" content="width" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="description" content="Зарегистрируйтесь на binance быстро и просто. Опубликовано: 03 Мая 2019. Чтобы защитить и зарегистрировать учетную запись Binance, необходимо открыть веб-сайт Binance..." />
+<meta name="description" content="Биржа Бинанс была взломана. Binance, потерпел крупномасштабное нарушение безопасности, когда хакерам удалось украсть около 7000 биткойнов, что стоит более 40 миллионов долларов США по текущей цене." />
 
 <link rel="stylesheet" href="/css/bin.css">
 <link rel="stylesheet" href="/css/global.base.css">
