--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -91,11 +91,21 @@
 	</div>
 </section>
 
-	<!--
-	div class="bin-gpu-img">
-	</div>
-	-->
+<section class="bin-art">
+	<div class="bin-vi2">
+<H1 class="bin-title"><a id="start"> 
+</a></h1>	
+<p> </p>
+
+<p>
+<a href="items/start/how/p0.png" target="_blank">
+<img src="items/start/how/p0.png" alt="p0"></a>
+</p>
+
+</div>
 </section>
+
+
 
 
 <section class="bin-down">
@@ -114,16 +124,6 @@
 
 
 
-	<div class="bin-vi2">
-<div class="bin-title"><a id="about">О Бинанс</a></div>	
-	<div class="bin-vi3">
-Binance стремится создать безопасное, прозрачное и открытое  сообщество для пользователей по всему миру. Компания ставит на первое место интересы сообщества, поддерживает механизм согласования 1400000 заказов в секунду, обеспечивает круглосуточное обслуживание клиентов и рассчитывает на сильную техническую поддержку со стороны нашей глобальной команды. Binance вместе с нашими пользователями создает блокчейн сообщество мирового класса.
-
-	
-	</div>
-</section>
-<div class="bin-team"></div>
-	</div>
 	
 
 <!-- footer-->
