--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -64,10 +64,9 @@
 
 		<div class="menu-toggle">
 			<ul class="menu clearfix">
-				<li class="first leaf"><a href="#start" title="">Регистрация</a></li>
-				<li class="leaf"><a href="#fees" title="">Комиссия</a></li>
-				<li class="leaf"><a href="#about" title="">Основатель</a></li>
-				<li class="last leaf"><a href="#reviews" title="">Отзывы</a></li>
+				<li class="first leaf"><a href="https://binance-register.github.io" title="">Главная</a></li>
+				<li class="leaf"><a href="#start" title="">Контент</a></li>
+				<li class="leaf"><a href="#download" title="">Зарегистрироваться</a></li>
 			</ul>
 		</div>  
 	</nav>
