--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -92,9 +92,8 @@
 
 <section class="bin-art">
 	<div class="bin-vi2">
-<H1 class="bin-title"><a id="start"> 
+<H1 class="bin-title"><a id="start">Взом Бинанс: как все происходило
 </a></h1>	
-<h2>Предыстория</h2>
 <p>Крупнейшая в мире биржа Binance была взломана. 07 мая 2019 года Binance потерпела крупномасштабное нарушение безопасности, когда хакерам удалось украсть около 7000 биткойнов, что стоит более 40 миллионов долларов США по текущей цене.</p>
 <p>Взлом произошел в неподходящее время для биржи, и это, похоже, самый большой взлом на сегодняшний день. Тем не менее, компания обещает покрыть украденные средства, потерянные в результате взлома.</p>
 <p>Как и каждый раз, когда взламывают биржи, об этом было сообщено вТвиттере как «внеплановое обслуживание сервера».</p>
