--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -56,7 +56,7 @@
 
 
 <div id="page-wrapper">
-  <div id="page" class="page at-mt">
+  <div id="page" class="page at-mt bin-inner">
 
 
 <div id="menu-bar" class="nav clearfix">
