--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -95,28 +95,28 @@
 <H1 class="bin-title"><a id="start">Взом Бинанс: как все происходило
 </a></h1>	
 <p>Крупнейшая в мире биржа Binance была взломана. 07 мая 2019 года Binance потерпела крупномасштабное нарушение безопасности, когда хакерам удалось украсть около 7000 биткойнов, что стоит более 40 миллионов долларов США по текущей цене.</p>
-<p>Взлом произошел в неподходящее время для биржи, и это, похоже, самый большой взлом на сегодняшний день. Тем не менее, компания обещает покрыть украденные средства, потерянные в результате взлома.</p>
+<p class="vaz">Взлом произошел в неподходящее время для биржи, и это, похоже, самый большой взлом на сегодняшний день. Тем не менее, компания обещает покрыть украденные средства, потерянные в результате взлома.</p>
 <p>Как и каждый раз, когда взламывают биржи, об этом было сообщено вТвиттере как «внеплановое обслуживание сервера».</p>
 <p>Это встревожило многих пользователей Твиттера, и многие продолжали обмениваться сообщениями с генеральным директором Binance, спрашивая, действительно ли биржа взломана.</p>
 <h2>Начало взлома</h2>
 <p>Что ж, вскоре после этого основатель Binance сделал твит с сообщением</p>
 <p>«Не лучшие дни, но мы останемся прозрачными. Спасибо за вашу поддержку!»,</p>
 <p>Предоставив более подробный отчет о событии взлома.</p>
-<p>Согласно официальному заявлению генерального директора Binance Чанпэна Чжао:</p>
+<p class="vaz">Согласно официальному заявлению генерального директора Binance Чанпэна Чжао:</p>
 <p>«Было затронуто около 2% активов Binance в BTC».</p>
 <p>&nbsp;В сообщении сообщается, что биржа столкнулась с нарушением правил безопасности, когда хакеры изъяли 7000 BTC (40 миллионов долларов) за одну транзакцию.</p>
 <p>Хэш Транзакция хака с участием около 7000 биткойнов: https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea</p>
 <p>В отчете говорится, что «хакер терпеливо ждал и выполнял хорошо организованные действия с помощью нескольких независимых учетных записей в наиболее подходящее время.</p>
 <p>&nbsp;«Транзакция организована таким образом, что она прошла все наши существующие проверки безопасности».</p>
 <p>Для них было прискорбно заблокировать вывод средств до его исполнения. Однако, когда снятие было выполнено, были вызваны различные тревоги в системе биржи, и в результате они немедленно остановили все изъятия средств.</p>
-<p>Хакер использовал различные методы в течение длительного периода времени, включая вирусы, фишинг и другие атаки, чтобы взломать кошелек Binance.</p>
+<p class="vaz2">Хакер использовал различные методы в течение длительного периода времени, включая вирусы, фишинг и другие атаки, чтобы взломать кошелек Binance.</p>
 <p>Бинанс отследил кражу и сообщил, что эта атака затронула только одну учетную запись, и это горячий кошелек Бинанса. На его долю приходится около 2% биржевых биткойн-холдингов.</p>
 <p>Горячий кошелек - это кошелек, который подключен к Интернету, где биржа, кажется, хранит средства для управления своими ежедневными торговыми операциями.</p>
 <p>Кроме горячего кошелька; хакер не смог получить доступ ни к какому холодному кошельку (автономное хранилище, где хранится большинство монет). Также ни один из пользователей кошельков не пострадал напрямую, - сообщили в бирже.</p>
 <h1>Обратите внимание на 2FA и учетные данные пользователей</h1>
 <p>Помимо похищенного BTC в заявлении также сообщается, что хакер получил большое количество пользователей 2FA-кодов, API-ключей и другой потенциальной информации, которые необходимы для входа в учетную запись Binance.</p>
 <p>Биржа предупредила, что</p>
-<p>«хакеры могут контролировать определенные учетные записи пользователей и использовать их для влияния на цены».</p>
+<blockquote>«хакеры могут контролировать определенные учетные записи пользователей и использовать их для влияния на цены».</blockquote>
 <p>Биржа не знает, сколько именно учетных записей пользователей было затронуто, что может быть известно только после проведения тщательного расследования безопасности.</p>
 <p>На данный момент рекомендуется изменить свой пароль и убедиться, что для вашей учетной записи включена двухфакторная аутентификация Google.</p>
 <h2>Фонды биржи</h2>
@@ -131,7 +131,7 @@
 <p>Также команда Binance в настоящее время работает с несколькими другими биржами, чтобы заблокировать депозиты с BTC адреса хакеров. В течение этого периода; снятие средств и депозиты будут заморожены. Однако торговля не затронута. Вы можете торговать как обычно, и торговля останется открытой для всех пользователей. Только снятие и депозиты останавливаются.</p>
 <h2>Обновление</h2>
 <p>Даже несмотря на то, что Бинанс быстро отреагировал на взлом и был очень прозрачен в отношении неприятного события; подобное драматическое событие всегда напоминает нам одно:</p>
-<p>«Не ваши ключи, не ваш биткойн» .</p>
+<blockquote>«Не ваши ключи, не ваш биткойн»</blockquote>
 <p>Закрытые ключи должны находиться под контролем отдельного владельца.</p>
 <p>В настоящее время команда Binance работает над проверкой безопасности, чтобы выяснить, что пошло не так и что можно сделать, чтобы решить проблему.</p>
 <p>Тем временем CZ (генеральный директор Binance) заявил, что они продолжат запланированный Twitter Ask Me Anything, как и планировалось.</p>
