--- a/vzlom0805.html
+++ b/vzlom0805.html
@@ -96,16 +96,16 @@
 </a></h1>	
 <p>Крупнейшая в мире биржа Binance была взломана. 07 мая 2019 года Binance потерпела крупномасштабное нарушение безопасности, когда хакерам удалось украсть около 7000 биткойнов, что стоит более 40 миллионов долларов США по текущей цене.</p>
 <p class="vaz">Взлом произошел в неподходящее время для биржи, и это, похоже, самый большой взлом на сегодняшний день. Тем не менее, компания обещает покрыть украденные средства, потерянные в результате взлома.</p>
-<p>Как и каждый раз, когда взламывают биржи, об этом было сообщено вТвиттере как «внеплановое обслуживание сервера».</p>
+<p>Как и каждый раз, когда взламывают биржи, об этом было сообщено в Твиттере как «внеплановое обслуживание сервера».</p>
 <p>Это встревожило многих пользователей Твиттера, и многие продолжали обмениваться сообщениями с генеральным директором Binance, спрашивая, действительно ли биржа взломана.</p>
 <h2>Начало взлома</h2>
 <p>Что ж, вскоре после этого основатель Binance сделал твит с сообщением</p>
-<p>«Не лучшие дни, но мы останемся прозрачными. Спасибо за вашу поддержку!»,</p>
+<blockquote>«Не лучшие дни, но мы останемся прозрачными. Спасибо за вашу поддержку!»,</blockquote>
 <p>Предоставив более подробный отчет о событии взлома.</p>
 <p class="vaz">Согласно официальному заявлению генерального директора Binance Чанпэна Чжао:</p>
-<p>«Было затронуто около 2% активов Binance в BTC».</p>
+<blockquote>«Было затронуто около 2% активов Binance в BTC».</blockquote>
 <p>&nbsp;В сообщении сообщается, что биржа столкнулась с нарушением правил безопасности, когда хакеры изъяли 7000 BTC (40 миллионов долларов) за одну транзакцию.</p>
-<p>Хэш Транзакция хака с участием около 7000 биткойнов: https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea</p>
+<p>Хэш Транзакция хака с участием около 7000 биткойнов: <a href="https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea" target="_blank" rel="nofollow">https://www.blockchain.com/btc/tx/e8b406091959700dbffcff30a60b190133721e5c39e89bb5fe23c5a554ab05ea</a></p>
 <p>В отчете говорится, что «хакер терпеливо ждал и выполнял хорошо организованные действия с помощью нескольких независимых учетных записей в наиболее подходящее время.</p>
 <p>&nbsp;«Транзакция организована таким образом, что она прошла все наши существующие проверки безопасности».</p>
 <p>Для них было прискорбно заблокировать вывод средств до его исполнения. Однако, когда снятие было выполнено, были вызваны различные тревоги в системе биржи, и в результате они немедленно остановили все изъятия средств.</p>
@@ -113,7 +113,7 @@
 <p>Бинанс отследил кражу и сообщил, что эта атака затронула только одну учетную запись, и это горячий кошелек Бинанса. На его долю приходится около 2% биржевых биткойн-холдингов.</p>
 <p>Горячий кошелек - это кошелек, который подключен к Интернету, где биржа, кажется, хранит средства для управления своими ежедневными торговыми операциями.</p>
 <p>Кроме горячего кошелька; хакер не смог получить доступ ни к какому холодному кошельку (автономное хранилище, где хранится большинство монет). Также ни один из пользователей кошельков не пострадал напрямую, - сообщили в бирже.</p>
-<h1>Обратите внимание на 2FA и учетные данные пользователей</h1>
+<h2>Обратите внимание на 2FA и учетные данные пользователей</h2>
 <p>Помимо похищенного BTC в заявлении также сообщается, что хакер получил большое количество пользователей 2FA-кодов, API-ключей и другой потенциальной информации, которые необходимы для входа в учетную запись Binance.</p>
 <p>Биржа предупредила, что</p>
 <blockquote>«хакеры могут контролировать определенные учетные записи пользователей и использовать их для влияния на цены».</blockquote>
